--- a/dashboard-wallet-page.html
+++ b/dashboard-wallet-page.html
@@ -578,6 +578,13 @@
             </div>
         </div>
     </div>
+    <div class="seller_modal">
+        <div class="modal-overlay fixed inset-0 bg-[#00020b66] z-[10]">
+            <div class="modal-content flex min-h-full items-center justify-center">
+                <div class="bg-[#fff] p-[20px] rounded-[10px] h-[200px] w-[300px]"></div>
+            </div>
+        </div>
+    </div>
     <script src="./assets/js/plugin.js"></script>
     <script src="./assets/js/main.js"></script>
 </body>
